Created benefits section

--- a/Index.html
+++ b/Index.html
@@ -59,5 +59,28 @@
             </form>
         </div>
     </header>
+    <section id="key-benefits">
+        <h2>O que você vai aprender:</h2>
+        <div class="benefits">
+            <div class="benefit">
+                <div id="benefit-1" class="benefit-img"></div>
+                    <p>
+                        Pilates faz toda a difereçença em sua vida, pratique pilates.
+                    </p>
+            </div>
+            <div class="benefit">
+                <div id="benefit-2" class="benefit-img"></div>
+                    <p>
+                        Pilates faz toda a difereçença em sua vida, pratique pilates.
+                    </p>
+            </div>
+            <div class="benefit">
+                <div id="benefit-3" class="benefit-img"></div>
+                    <p>
+                        Pilates faz toda a difereçença em sua vida, pratique pilates.
+                    </p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
