Created Studio location section

--- a/Index.html
+++ b/Index.html
@@ -59,6 +59,7 @@
             </form>
         </div>
     </header>
+
     <section id="key-benefits">
         <h2>O que você vai aprender:</h2>
         <div class="benefits">
@@ -81,6 +82,24 @@
                     </p>
             </div>
         </div>
+    </section>
+
+    <section id="location">
+        <div id="address">
+            <i class="bi bi-geo-alt-fill"></i>
+            <div id="address-details">
+                <p>Avenida Major Joaquim Monteiro Patto, 22</p>
+                <p>Jardim das Monções</p>
+                <p>Abre as 7:00</p>
+            </div>
+        </div>
+        <div id="about-location">
+            <h3>Local de destaque</h3>
+            <p>
+                O estudio se encontra no local bem localizado e com ambiente climatizado para atender melhor nossos clientes e parceiros.
+            </p>
+        </div>
+
     </section>
 </body>
 </html>
