--- a/Index.html
+++ b/Index.html
@@ -21,6 +21,7 @@
     />
 </head>
 <body>
+
     <header id="event-description">
         <div id="disclaimer">
             <h2>NewLife</h2>
@@ -99,7 +100,43 @@
                 O estudio se encontra no local bem localizado e com ambiente climatizado para atender melhor nossos clientes e parceiros.
             </p>
         </div>
-
     </section>
+
+    <section id="details">
+        <div class="detail" id="detail-1">
+            <img src="img/hrz-3.jpg" alt="Sala decorada em tons claros">
+            <div class="detail-description">
+                <h3>Conheça os ambientes que você vai aprender a decorar</h3>
+            </div>
+        </div>
+        <div class="detail" id="detail-2">
+            <div class="detail-description">
+                <h3>Detalhes</h3>
+                <ul>
+                    <li>Posicionamento</li>
+                    <li>Aproveitamento de espaço</li>
+                    <li>Combinação de cores</li>
+                    <li>Organização</li>
+                    <li>E muito mais...</li>
+                </ul>
+            </div>
+            <img src="img/hrz-4.jpg" alt="Sala de jantar decorada">
+        </div>
+        <div class="detail" id="detail-3">
+            <img src="img/hrz-5.jpg" alt="Sala decorada em tons escuros">
+            <div class="detail-description">
+                <h3>Objetos</h3>
+                <ul>
+                    <li>Cadeiras</li>
+                    <li>Mesas</li>
+                    <li>Espelhos</li>
+                    <li>Plantas</li>
+                    <li>Cortinas</li>
+                    <li>E muito mais...</li>
+                </ul>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
