--- a/Index.html
+++ b/Index.html
@@ -138,5 +138,17 @@
         </div>
     </section>
 
+    <section id="cta">
+        <h3>Gostou? Marque uma aula experimental GRÁTIS:</h3>
+        <button class="btn">Marcar aula GRÁTIS</button>
+    </section>
+
+    <footer id="footer">
+        <h3>NewLife</h3>
+        <p>A evolução do seu corpo começa aqui</p>
+        <p><span>Entre em contato:</span> contato@pilatesnewlife.com.br</p>
+        <p><span>Ou pelo telefone:</span> (12) 99199-2336</p>
+    </footer>
+
 </body>
 </html>
