Created Media query for mobile

--- a/Index.html
+++ b/Index.html
@@ -86,20 +86,23 @@
     </section>
 
     <section id="location">
+
         <div id="address">
             <i class="bi bi-geo-alt-fill"></i>
             <div id="address-details">
-                <p>Avenida Major Joaquim Monteiro Patto, 22</p>
+                <p>Avenida M. J. Monteiro Patto, 22</p>
                 <p>Jardim das Monções</p>
                 <p>Abre as 7:00</p>
             </div>
         </div>
+
         <div id="about-location">
             <h3>Local de destaque</h3>
             <p>
                 O estudio se encontra no local bem localizado e com ambiente climatizado para atender melhor nossos clientes e parceiros.
             </p>
         </div>
+
     </section>
 
     <section id="details">
@@ -145,9 +148,9 @@
 
     <footer id="footer">
         <h3>NewLife</h3>
-        <p>A evolução do seu corpo começa aqui</p>
-        <p><span>Entre em contato:</span> contato@pilatesnewlife.com.br</p>
-        <p><span>Ou pelo telefone:</span> (12) 99199-2336</p>
+        <p>A evolução do seu corpo</p>
+        <p><span>E-mail:</span> contato@pilatesnewlife.com.br</p>
+        <p><span>Telefone / WhatsApp:</span> (12) 99199-2336</p>
     </footer>
 
 </body>
